Bug 1053398 - save xbl bindtountrustedcontent to xul cache as a flag, r=bholley,smaug